--- a/Cringely/package.json
+++ b/Cringely/package.json
@@ -8,7 +8,6 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "main": "index.js",
-  
   "homepage": "https://github.com/apjanusz/javascript-project#readme",
   "bugs": {
     "url": "https://github.com/apjanusz/javascript-project/issues"
@@ -19,7 +18,6 @@
   },
   "license": "ISC",
   "author": "",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -31,11 +29,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3",
-    "express": "^5.1.0",
-    "nodemon": "^3.1.10" 
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
