--- a/Cringely/package.json
+++ b/Cringely/package.json
@@ -30,10 +30,13 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
+    "vue-chart.js": "^0.2.0",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
