--- a/Cringely/package.json
+++ b/Cringely/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "chartjs": "^0.3.24",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "pinia": "^3.0.3",
